<resources>
    <string name="app_name">Показания счетчиков</string>

    <string name="action_chart">Диаграмма</string>
    <string name="action_settings">Настройки</string>
    <string name="action_homes">Ваши дома (квартиры)</string>
    <string name="action_backupCopying">Резервное копирование</string>

    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_homes">Ваши дома (квартиры)</string>
    <string name="title_activity_chart">Диаграмма</string>
    <string name="title_activity_backupCopying">Резервное копирование</string>

    <string name="title_spinner">Выберите из списка ниже дом, показания которого интересуют Вас: </string>

    <string name="matBtn_backup">Создать резервную копию</string>
    <string name="matBtn_restore">Восстановить из резервной копии</string>

    <string name="settings_reading">Показания каких ресурсов хотите сохранять?!</string>
    <string name="coldWater">Холодная вода</string>
    <string name="coldWater_off">Холодная вода не будет включена</string>
    <string name="coldWater_on">Холодная вода будет включена</string>

    <string name="hotWater">Горячая вода</string>
    <string name="hotWater_off">Горячая вода не будет включена</string>
    <string name="hotWater_on">Горячая вода будет включена</string>

    <string name="drainWater">Канализация</string>
    <string name="drainWater_off">Канализация не будет включена</string>
    <string name="drainWater_on">Канализация будет включена</string>

    <string name="electricity">Электричество</string>
    <string name="electricity_off">Электричество не будет включено</string>
    <string name="electricity_on">Электричество будет включено</string>

    <string name="gas">Газ</string>
    <string name="gas_off">Газ не будет включен</string>
    <string name="gas_on">Газ будет включен</string>

    <string name="preference_hint_day">День месяца</string>
    <string name="preference_helper_day">День месяца - число от 1 до 31</string>
    <string name="preference_hint_time">Время</string>

    <string name="channel_name">reading notification channel</string>
    <string name="channel_description">reading notification channel</string>

    <string name="successful_backup">Резервное копирование выполнилось успешно!</string>
    <string name="failed_backup">Не удалось выполнить резервное копирование!</string>
    <string name="successful_restoration">Обновление данных произошло успешно!</string>
    <string name="unsuccessful_restoration">Не удалось обновить данные!</string>

    <string name="chart_description">Данные по месяцам</string>
    <string name="chart_noDataText">Для этого дома нет данных для отображения!</string>
    <string name="label_coldWater">Холодная вода</string>
    <string name="label_hotWater">Горячая вода</string>
    <string name="label_drainWater">Канализация</string>
    <string name="label_electricity">Электричество</string>
    <string name="label_gas">Газ</string>

    <string name="hint_date">Дата снятия</string>
    <string name="hint_coldWater">Холодная вода</string>
    <string name="hint_hotWater">Горячая вода</string>
    <string name="hint_drainWater">Канализация</string>
    <string name="hint_electricity">Электричество</string>
    <string name="hint_gas">Газ</string>

    <string name="title_createReading">Введите Ваши показания</string>
    <string name="title_editReading">Измените Ваши данные</string>

    <string name="txt_choice">Выберите желаемое действие</string>
    <string name="txt_edit">Изменить</string>
    <string name="txt_delete">Удалить</string>

    <string name="hint_home">Адрес Вашего дома</string>

    <string name="title_createHome">Создание информации о новом доме</string>
    <string name="toast_createHome">Для создания необходимо указать адрес!</string>

    <string name="title_editHome">Изменение информации о доме</string>
    <string name="toast_editHome">Для обновления необходимо указать адрес!</string>

    <string name="title_deleteHome">Удаление информации о доме</string>
    <string name="delete_home_message">Удаление информации о доме также приведет к удалению всех показаний для данного дома. Хотите удалить информацию о данном доме и всего его показания?</string>

    <string name="btn_save">Сохранить</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_delete">Удалить</string>
    <string name="action_reports">Отчеты</string>
    <string name="title_activity_report">Отчеты</string>


</resources>
