<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<PreferenceCategory app:title="@string/messages_header">-->

        <!--<EditTextPreference-->
            <!--app:key="signature"-->
            <!--app:title="@string/signature_title"-->
            <!--app:useSimpleSummaryProvider="true" />-->

        <!--<ListPreference-->
            <!--app:defaultValue="reply"-->
            <!--app:entries="@array/reply_entries"-->
            <!--app:entryValues="@array/reply_values"-->
            <!--app:key="reply"-->
            <!--app:title="@string/reply_title"-->
            <!--app:useSimpleSummaryProvider="true" />-->

    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory app:title="@string/sync_header">-->

        <!--<SwitchPreferenceCompat-->
            <!--app:key="sync"-->
            <!--app:title="@string/sync_title" />-->

        <!--<SwitchPreferenceCompat-->
            <!--app:dependency="sync"-->
            <!--app:key="attachment"-->
            <!--app:summaryOff="@string/attachment_summary_off"-->
            <!--app:summaryOn="@string/attachment_summary_on"-->
            <!--app:title="@string/attachment_title" />-->

    <!--</PreferenceCategory>-->

    <PreferenceCategory app:title="@string/settings_reading">

        <SwitchPreferenceCompat
            app:key="coldWater"
            app:title="@string/coldWater"
            app:summaryOff="@string/coldWater_off"
            app:summaryOn="@string/coldWater_on"/>

        <SwitchPreferenceCompat
            app:key="hotWater"
            app:summaryOff="@string/hotWater_off"
            app:summaryOn="@string/hotWater_on"
            app:title="@string/hotWater" />

        <SwitchPreferenceCompat
            app:key="drainWater"
            app:summaryOff="@string/drainWater_off"
            app:summaryOn="@string/drainWater_on"
            app:title="@string/drainWater" />

        <SwitchPreferenceCompat
            app:key="electricity"
            app:summaryOff="@string/electricity_off"
            app:summaryOn="@string/electricity_on"
            app:title="@string/electricity" />

        <SwitchPreferenceCompat
            app:key="gas"
            app:summaryOff="@string/gas_off"
            app:summaryOn="@string/gas_on"
            app:title="@string/gas" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
