<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.sewerina.meter_readings.ui.readings_main.MainActivity">

    <item
        android:id="@+id/action_homes"
        android:title="@string/action_homes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chart"
        android:title="@string/action_chart"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backupCopying"
        android:title="@string/action_backupCopying"
        app:showAsAction="never" />


</menu>