<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/txt_choice"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/txt_edit"
        android:textAllCaps="false"
        app:icon="@drawable/ic_edit"
        app:iconGravity="start"
        app:iconPadding="32dp"
        app:iconTint="#253DC5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/txt_delete"
        android:textAllCaps="false"
        app:icon="@drawable/ic_delete"
        app:iconGravity="start"
        app:iconPadding="32dp"
        app:iconTint="#EB3434" />

</LinearLayout>